--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="calculator">
-    <h1>Calculator</h1>
+    <h1>Calculator</h1>git push -u origin main
     <button class="mode-toggle" onclick="toggleMode()">🌙</button>
 
     <!-- Display -->
